# This file is part of lustre-tools-llnl.
#
# SPDX-License-Identifier: GPL-2.0
# See [LICENSE-GPL-2.0](https://github.com/LLNL/lustre-tools-llnl/LICENSE-GPL-2.0)
#
# Copyright (c) 2011, Lawrence Livermore National Security, LLC.
# Produced at the Lawrence Livermore National Laboratory.
# LLNL-CODE-468512

dist_sbin_SCRIPTS = lflush lustre_quota_summary zfsobj2fid ldev2pcs llogcolor lustre_fssync

resourceagentdir = ${prefix}/lib/ocf/resource.d/llnl
dist_resourceagent_SCRIPTS = lustre zpool
